<resources>
    <string name="app_name">Mangia E Bivi</string>
    <string name="email_hint">Insert E-Mail</string>
    <string name="password_hint">Insert Password</string>
    <string name="phone_hint">Insert Phone Number</string>
    <string name="Bottone_Login">Login</string>
    <string name="Bottone_Registrati">Registrati</string>
    <string name="Password_Errata">Password Errata</string>
    <string name="email_Errata">Email Errata</string>
    <string name="login_ok">Login OK</string>
    <string name="ena_darkmode">Enable Dark Mode</string>
    <string name="login">Login</string>
    <string name="shop">Shop</string>
    <string name="checkout">Checkout</string>
    <string name="register">Registrati</string>
    <string name="cambia_vista">Cambia Visualizzazione</string>
    <string name="totale">TOTAL :</string>
    <string name="totale_def">0,00 €</string>
    <string name="min_ord">Min Order:</string>
    <string name="min_ord_def">10,00 €</string>
    <string name="order_label">Riepilogo ordine</string>
    <string name="pay">Pay</string>
    <string name="remove_title">Are you sure?</string>
    <string name="be_careful">Be careful</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">cancel</string>
</resources>
