<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/colorCardBG"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imagecard"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/burger_king"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginVertical="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/shopnametc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Burger King" />

                    <TextView
                        android:id="@+id/shopaddresstc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Via Tiburtina 723" />

                    <TextView
                        android:id="@+id/minimumordertc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="20€" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sw_layout"
        android:layout_below="@+id/header"
        android:layout_above="@id/footero"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/item_cv">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleview_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/item_cv">

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/totale"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/totale_def"
                        android:textAlignment="viewStart"
                        android:id="@+id/totale"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/min_ord"
                        android:textAlignment="viewEnd"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/min_ord_def"
                        android:textAlignment="viewEnd"/>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:progress="25"
                    android:progressTint="@color/colorPrimary"
                    android:progressBackgroundTint="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/checkout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>